[workspace]
members = [
    "crates/stellar-toolkit",
    "contracts/amm-pool",
    "contracts/amm-factory",
    "contracts/amm-router",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Kevin737866/stellar-web3-toolkit"

[workspace.dependencies]
soroban-sdk = "20.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
