[workspace]
members = [
    "crates/stellar-toolkit",
    "crates/payment-channel",
    "crates/channel-router",
    "crates/watchtower",
    "crates/channel-simulator",
    "crates/atomic-swap",
    "crates/stellar-did",
    "contracts/payment-channel-contract",
    "contracts/amm-pool",
    "contracts/amm-factory",
    "contracts/amm-router",
    "contracts/htlc-contract",
]

resolver = "2"

[workspace.dependencies]
soroban-sdk = "20.5.0"
stellar-xdr = "20.0.0"

# Payment Channel Dependencies
sha2 = "0.10.8"
hmac = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonical = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
priority-queue = "1.3"
fxhash = "0.2"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
once_cell = "1.19"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }

# DID Dependencies
ed25519-dalek = "2.0"
base64 = "0.21"
url = "2.4"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-graphql = "7.0"
async-graphql-axum = "7.0"
json-ld = "0.16"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Kevin737866/stellar-web3-toolkit"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
