[package]
name = "amm-router"
version.workspace = true
edition.workspace = true
publish = false
rust-version = "1.74.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
amm-pool = { path = "../amm-pool", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
amm-pool = { path = "../amm-pool", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
