[package]
name = "payment-channel-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]
