[package]
name = "atomic-swap"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
stellar-xdr = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
