[package]
name = "stellar-toolkit"
version.workspace = true
edition.workspace = true
authors = ["Your Name <your.email@example.com>"]
description = "CLI and tooling for Soroban contracts in stellar-web3-toolkit"
license.workspace = true
repository.workspace = true

[[bin]]
name = "stellar-toolkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "process"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
